@@ -5,6 +5,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - System: Stricter handling of oversize variable and PROC/FN names.
 - System: Improved handling of ESCAPE under RISC OS (notably, it no longer
   crashes the interpreter).
+- System: Improve behaviour on Linux console framebuffer
 
 * V1.22.12 - 05 December 2021
 - System: Fix some floating-point data size mismatches
